[project]
name = "squeeze-scanner"
version = "0.1.0"
description = "A FastAPI short squeeze scanner with a browser front-end."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "jinja2>=3.1,<4",
    "pandas>=2.0,<3",
    "uvicorn[standard]>=0.27,<1",
    "yfinance>=0.2.40,<1",
]

[project.scripts]
squeeze-scanner = "app.server:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"static" = "static"
"templates" = "templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
